# suncast-pygsfit

./: .gitignore  README.md  Tutorial.ipynb  gspyfit.py  gspyfit_utils.py  manifest.in  pygsfit_cp.py  pygsfit_cp_Tutorial.ipynb  pygsfit_cp_utils.py  pyproject.toml  read_hdf5.pro  results_convertor.py  setup.py  test.py
IDL_utils/: process_params_maps.pro  read_hdf5.pro
docs/: Real_input.txt
pygsfit/: fitting_result_restore.py  manifest.in  pygsfit.py  pyproject.toml
pygsfit/pygsfit/src_gyrosynchrotron/: IDLinterface.cpp  Plasma.cpp
pygsfit/pygsfit/utils/: ndfits.py
pygsfit/src_gyrosynchrotron/: gscodes.vcxproj
pygsfit/utils/: export_pygsfitcp_batch_script.py  gstools.py  img_utils.py  roiutils.py
pygsfit_cp/: pygsfit_cp.py  pygsfit_cp_Tutorial.ipynb  pygsfit_cp_src.py  results_convertor.py  setup.py
pygsfit_cp/demo/: batch_mode_script.py  pygsfit_cp_Tutorial.ipynb
pygsfit_cp/docs/: Parms_input.txt
pygsfit_cp/fortran_src/: Calc_GS_Spec_hom.for  ResolvedSpectrum.for  klein.f  makefile
pygsfit_cp/pygsfit_cp/: pygsfit_cp_src.py  pygsfit_cp_utils.py
pygsfit_cp/pygsfit_cp/docs/: Long_input.txt
pygsfit_cp/pygsfit_cp/unix/: angular.for
pygsfit_cp/unix/: FitFun.for  fit_Spectrum_Kl.for  spidrsub.for
unix/: fit_Spectrum_Kl_backup.for
